--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,10 +1,9 @@
-.navbar {
+.navbar .bg-light {
     background-color: blue;
     color: aliceblue;
-    text-align: center;
     font-size: 40px;
-    font-family:'Comfortaa', curesive;
-    padding: 10px;
+    font-family: 'Comfortaa', cursive;
+
 }
 
 .col-4 {
