--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -16,6 +16,11 @@
     border-color: black;
 }
 
+.col-2 {
+    border-style: inset;
+    border-color: black;
+}
+
 #today {
     border-style: inset;
     border-color: black;
