added futre evets -used other api, will try to talk to tutor about 404 errors

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -21,6 +21,11 @@
     border-color: black;
 }
 
+.col {
+    border-style: inset;
+    border-color: black;
+}
+
 #today {
     border-style: inset;
     border-color: black;
