added text break to temp;

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -34,3 +34,12 @@
 #image {
  width: 150px;
 }
+
+.text-truncate {
+    display: inline-block
+}
+
+.text-break {
+    overflow-wrap: break-word;
+    word-break: break-word;
+}
